# matrix-openai-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: bot.rs  lib.rs  main.rs  openai.rs  util.rs
src/bot/: config.rs  events.rs  matrix_bot.rs  mod.rs
src/openai/: mod.rs  requests.rs
src/utils/: mod.rs  util.rs
